# core_api_client

./: Cargo.toml  LICENSE  LICENSE.txt  README.md  bla.txt
.github/workflows/: build.yml  test.yml
src/: errors.rs  lib.rs  main.rs
src/helpers/: mod.rs  response_handler.rs  string_number_deserializer.rs
src/models/: api.rs  api_builder.rs  author.rs  data_provider.rs  empty.rs  identifier.rs  journal.rs  link.rs  mod.rs  query.rs  reference.rs  work.rs
src/models/data_provider_models/: data_provider.rs  identifier_type.rs  location.rs  mod.rs  other_identifiers.rs
src/models/discovery_models/: discovery.rs  mod.rs
src/models/jorunal_models/: journal.rs
src/models/journal_models/: journal.rs  mod.rs
src/models/query_models/: filter.rs  filter_operator.rs  logical_operator.rs  mod.rs  query.rs  request_type.rs  search_query.rs
src/models/work_models/: author.rs  data_provider.rs  empty.rs  identifier.rs  journal.rs  link.rs  mod.rs  reference.rs  work.rs
src/responses/: mod.rs  response.rs  response_types.rs  responses.rs  search.rs
